Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Changes for current svn
=======================

 o #16718 Replication: Strings containing control chars (ASCII < 13) are now base64 encoded

 o #16712 EventPlugin: Sending now ConnectQos-remoteProperty for callbackState events

 o #16710 EventPlugin: Sending now ConnectQos-remoteProperty preparsed in Login/Logout event clientProperty

 o #16708 EventPlugin: Added recursion detection for subscribe/unSubscribe events
          Added clientProperty '_url' for XPath use case

 o #16706 EventPlugin: Added client properties to event from SubscribeQos and UnSubscribeQos

 o #16702 Fixed MsgUnit - Qos XML markup: escape not allowed chars

 o #16693 Fixed XPath query multi threading bug, reported by John Horner 2008-01-12

 o #16689 Added recursive flag to filewatcher (to scan directories recursively).

 o #16676 C++ client library: Added ~ConnectQosData() because of crash on MacOSX

 o #16674 When an exception occurs in the update method it was converted to a COMMUNICATION
          and the original information was lost: now it is passed as embedded.

 o #16660 Catching client side exceptions of type other than user.* and communication.*
          and converting them to "user.update.internalError"

 o #16657 Fix to not shutdown xmlBlaster for severe client side exceptions during callback
          Problem could not occure for Java or C++ clients

 o #16654 Dead message generation: Now detecting 'isErrorHandled' specific for each
          queue instance (and not only for each MsgUnit).

 o #16652 C++ Implemented same I_PostSendEvent error handling as in Java


Changes for 1.6.2 [2007-12-03] #16646 'Openroads'
=================================================

 o #16639 Implemented I_PostSendListener for java clients and server
          to get notification on *asynchronous* send messages from queue:
	  1. postSend() delivers the ReturnQos